qt/gen_qlayout.nim


proc fcQLayout_new(parent: pointer): ptr cQLayout {.importc: "QLayout_new".}
proc fcQLayout_new2(): ptr cQLayout {.importc: "QLayout_new2".}
proc fcQLayout_metaObject(self: pointer, ): pointer {.importc: "QLayout_metaObject".}
proc fcQLayout_metacast(self: pointer, param1: cstring): pointer {.importc: "QLayout_metacast".}
proc fcQLayout_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QLayout_metacall".}
proc fcQLayout_tr(s: cstring): struct_miqt_string {.importc: "QLayout_tr".}
proc fcQLayout_trUtf8(s: cstring): struct_miqt_string {.importc: "QLayout_trUtf8".}
proc fcQLayout_margin(self: pointer, ): cint {.importc: "QLayout_margin".}
proc fcQLayout_setMargin(self: pointer, margin: cint): void {.importc: "QLayout_setMargin".}
proc fcQLayout_spacing(self: pointer, ): cint {.importc: "QLayout_spacing".}
proc fcQLayout_setSpacing(self: pointer, spacing: cint): void {.importc: "QLayout_setSpacing".}
proc fcQLayout_setContentsMargins(self: pointer, left: cint, top: cint, right: cint, bottom: cint): void {.importc: "QLayout_setContentsMargins".}
proc fcQLayout_setContentsMarginsWithMargins(self: pointer, margins: pointer): void {.importc: "QLayout_setContentsMarginsWithMargins".}
proc fcQLayout_getContentsMargins(self: pointer, left: ptr cint, top: ptr cint, right: ptr cint, bottom: ptr cint): void {.importc: "QLayout_getContentsMargins".}
proc fcQLayout_contentsMargins(self: pointer, ): pointer {.importc: "QLayout_contentsMargins".}
proc fcQLayout_contentsRect(self: pointer, ): pointer {.importc: "QLayout_contentsRect".}
proc fcQLayout_setAlignment(self: pointer, w: pointer, alignment: cint): bool {.importc: "QLayout_setAlignment".}
proc fcQLayout_setAlignment2(self: pointer, l: pointer, alignment: cint): bool {.importc: "QLayout_setAlignment2".}
proc fcQLayout_setSizeConstraint(self: pointer, sizeConstraint: cint): void {.importc: "QLayout_setSizeConstraint".}
proc fcQLayout_sizeConstraint(self: pointer, ): cint {.importc: "QLayout_sizeConstraint".}
proc fcQLayout_setMenuBar(self: pointer, w: pointer): void {.importc: "QLayout_setMenuBar".}
proc fcQLayout_menuBar(self: pointer, ): pointer {.importc: "QLayout_menuBar".}
proc fcQLayout_parentWidget(self: pointer, ): pointer {.importc: "QLayout_parentWidget".}
proc fcQLayout_invalidate(self: pointer, ): void {.importc: "QLayout_invalidate".}
proc fcQLayout_geometry(self: pointer, ): pointer {.importc: "QLayout_geometry".}
proc fcQLayout_activate(self: pointer, ): bool {.importc: "QLayout_activate".}
proc fcQLayout_update(self: pointer, ): void {.importc: "QLayout_update".}
proc fcQLayout_addWidget(self: pointer, w: pointer): void {.importc: "QLayout_addWidget".}
proc fcQLayout_addItem(self: pointer, param1: pointer): void {.importc: "QLayout_addItem".}
proc fcQLayout_removeWidget(self: pointer, w: pointer): void {.importc: "QLayout_removeWidget".}
proc fcQLayout_removeItem(self: pointer, param1: pointer): void {.importc: "QLayout_removeItem".}
proc fcQLayout_expandingDirections(self: pointer, ): cint {.importc: "QLayout_expandingDirections".}
proc fcQLayout_minimumSize(self: pointer, ): pointer {.importc: "QLayout_minimumSize".}
proc fcQLayout_maximumSize(self: pointer, ): pointer {.importc: "QLayout_maximumSize".}
proc fcQLayout_setGeometry(self: pointer, geometry: pointer): void {.importc: "QLayout_setGeometry".}
proc fcQLayout_itemAt(self: pointer, index: cint): pointer {.importc: "QLayout_itemAt".}
proc fcQLayout_takeAt(self: pointer, index: cint): pointer {.importc: "QLayout_takeAt".}
proc fcQLayout_indexOf(self: pointer, param1: pointer): cint {.importc: "QLayout_indexOf".}
proc fcQLayout_indexOfWithQLayoutItem(self: pointer, param1: pointer): cint {.importc: "QLayout_indexOfWithQLayoutItem".}
proc fcQLayout_count(self: pointer, ): cint {.importc: "QLayout_count".}
proc fcQLayout_isEmpty(self: pointer, ): bool {.importc: "QLayout_isEmpty".}
proc fcQLayout_controlTypes(self: pointer, ): cint {.importc: "QLayout_controlTypes".}
proc fcQLayout_replaceWidget(self: pointer, fromVal: pointer, to: pointer): pointer {.importc: "QLayout_replaceWidget".}
proc fcQLayout_totalHeightForWidth(self: pointer, w: cint): cint {.importc: "QLayout_totalHeightForWidth".}
proc fcQLayout_totalMinimumSize(self: pointer, ): pointer {.importc: "QLayout_totalMinimumSize".}
proc fcQLayout_totalMaximumSize(self: pointer, ): pointer {.importc: "QLayout_totalMaximumSize".}
proc fcQLayout_totalSizeHint(self: pointer, ): pointer {.importc: "QLayout_totalSizeHint".}
proc fcQLayout_layout(self: pointer, ): pointer {.importc: "QLayout_layout".}
proc fcQLayout_setEnabled(self: pointer, enabled: bool): void {.importc: "QLayout_setEnabled".}
proc fcQLayout_isEnabled(self: pointer, ): bool {.importc: "QLayout_isEnabled".}
proc fcQLayout_closestAcceptableSize(w: pointer, s: pointer): pointer {.importc: "QLayout_closestAcceptableSize".}
proc fcQLayout_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QLayout_tr2".}
proc fcQLayout_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QLayout_tr3".}
proc fcQLayout_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QLayout_trUtf82".}
proc fcQLayout_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QLayout_trUtf83".}
proc fcQLayout_replaceWidget3(self: pointer, fromVal: pointer, to: pointer, options: cint): pointer {.importc: "QLayout_replaceWidget3".}
proc fQLayout_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QLayout_virtualbase_metacall".}
proc fcQLayout_override_virtual_metacall(self: pointer, slot: int) {.importc: "QLayout_override_virtual_metacall".}
proc fQLayout_virtualbase_invalidate(self: pointer, ): void{.importc: "QLayout_virtualbase_invalidate".}
proc fcQLayout_override_virtual_invalidate(self: pointer, slot: int) {.importc: "QLayout_override_virtual_invalidate".}
proc fQLayout_virtualbase_geometry(self: pointer, ): pointer{.importc: "QLayout_virtualbase_geometry".}
proc fcQLayout_override_virtual_geometry(self: pointer, slot: int) {.importc: "QLayout_override_virtual_geometry".}
proc fcQLayout_override_virtual_addItem(self: pointer, slot: int) {.importc: "QLayout_override_virtual_addItem".}
proc fQLayout_virtualbase_expandingDirections(self: pointer, ): cint{.importc: "QLayout_virtualbase_expandingDirections".}
proc fcQLayout_override_virtual_expandingDirections(self: pointer, slot: int) {.importc: "QLayout_override_virtual_expandingDirections".}
proc fQLayout_virtualbase_minimumSize(self: pointer, ): pointer{.importc: "QLayout_virtualbase_minimumSize".}
proc fcQLayout_override_virtual_minimumSize(self: pointer, slot: int) {.importc: "QLayout_override_virtual_minimumSize".}
proc fQLayout_virtualbase_maximumSize(self: pointer, ): pointer{.importc: "QLayout_virtualbase_maximumSize".}
proc fcQLayout_override_virtual_maximumSize(self: pointer, slot: int) {.importc: "QLayout_override_virtual_maximumSize".}
proc fQLayout_virtualbase_setGeometry(self: pointer, geometry: pointer): void{.importc: "QLayout_virtualbase_setGeometry".}
proc fcQLayout_override_virtual_setGeometry(self: pointer, slot: int) {.importc: "QLayout_override_virtual_setGeometry".}
proc fcQLayout_override_virtual_itemAt(self: pointer, slot: int) {.importc: "QLayout_override_virtual_itemAt".}
proc fcQLayout_override_virtual_takeAt(self: pointer, slot: int) {.importc: "QLayout_override_virtual_takeAt".}
proc fQLayout_virtualbase_indexOf(self: pointer, param1: pointer): cint{.importc: "QLayout_virtualbase_indexOf".}
proc fcQLayout_override_virtual_indexOf(self: pointer, slot: int) {.importc: "QLayout_override_virtual_indexOf".}
proc fcQLayout_override_virtual_count(self: pointer, slot: int) {.importc: "QLayout_override_virtual_count".}
proc fQLayout_virtualbase_isEmpty(self: pointer, ): bool{.importc: "QLayout_virtualbase_isEmpty".}
proc fcQLayout_override_virtual_isEmpty(self: pointer, slot: int) {.importc: "QLayout_override_virtual_isEmpty".}
proc fQLayout_virtualbase_controlTypes(self: pointer, ): cint{.importc: "QLayout_virtualbase_controlTypes".}
proc fcQLayout_override_virtual_controlTypes(self: pointer, slot: int) {.importc: "QLayout_override_virtual_controlTypes".}
proc fQLayout_virtualbase_layout(self: pointer, ): pointer{.importc: "QLayout_virtualbase_layout".}
proc fcQLayout_override_virtual_layout(self: pointer, slot: int) {.importc: "QLayout_override_virtual_layout".}
proc fQLayout_virtualbase_childEvent(self: pointer, e: pointer): void{.importc: "QLayout_virtualbase_childEvent".}
proc fcQLayout_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QLayout_override_virtual_childEvent".}
proc fQLayout_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QLayout_virtualbase_event".}
proc fcQLayout_override_virtual_event(self: pointer, slot: int) {.importc: "QLayout_override_virtual_event".}
proc fQLayout_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QLayout_virtualbase_eventFilter".}
proc fcQLayout_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QLayout_override_virtual_eventFilter".}
proc fQLayout_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QLayout_virtualbase_timerEvent".}
proc fcQLayout_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QLayout_override_virtual_timerEvent".}
proc fQLayout_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QLayout_virtualbase_customEvent".}
proc fcQLayout_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QLayout_override_virtual_customEvent".}
proc fQLayout_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QLayout_virtualbase_connectNotify".}
proc fcQLayout_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QLayout_override_virtual_connectNotify".}
proc fQLayout_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QLayout_virtualbase_disconnectNotify".}
proc fcQLayout_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QLayout_override_virtual_disconnectNotify".}
proc fcQLayout_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QLayout_override_virtual_sizeHint".}
proc fQLayout_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QLayout_virtualbase_hasHeightForWidth".}
proc fcQLayout_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QLayout_override_virtual_hasHeightForWidth".}
proc fQLayout_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QLayout_virtualbase_heightForWidth".}
proc fcQLayout_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QLayout_override_virtual_heightForWidth".}
proc fQLayout_virtualbase_minimumHeightForWidth(self: pointer, param1: cint): cint{.importc: "QLayout_virtualbase_minimumHeightForWidth".}
proc fcQLayout_override_virtual_minimumHeightForWidth(self: pointer, slot: int) {.importc: "QLayout_override_virtual_minimumHeightForWidth".}
proc fQLayout_virtualbase_widget(self: pointer, ): pointer{.importc: "QLayout_virtualbase_widget".}
proc fcQLayout_override_virtual_widget(self: pointer, slot: int) {.importc: "QLayout_override_virtual_widget".}
proc fQLayout_virtualbase_spacerItem(self: pointer, ): pointer{.importc: "QLayout_virtualbase_spacerItem".}
proc fcQLayout_override_virtual_spacerItem(self: pointer, slot: int) {.importc: "QLayout_override_virtual_spacerItem".}
proc fcQLayout_staticMetaObject(): pointer {.importc: "QLayout_staticMetaObject".}
proc fcQLayout_delete(self: pointer) {.importc: "QLayout_delete".}


func init*(T: type QLayout, h: ptr cQLayout): QLayout =
  T(h: h)
proc create*(T: type QLayout, parent: gen_qwidget.QWidget): QLayout =

  QLayout.init(fcQLayout_new(parent.h))
proc create*(T: type QLayout, ): QLayout =

  QLayout.init(fcQLayout_new2())
proc metaObject*(self: QLayout, ): gen_qobjectdefs.QMetaObject =
